example/8.Ingress/Nginx_Ingress/1.nginx-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test-ingress-depploy
  labels:
    app: nginx-test-ingress-depploy
  namespace: nginx-ingress
spec:
  selector:
    matchLabels:
      app: nginx-test-ingress-app
  template:
    metadata:
      labels:
        app: nginx-test-ingress-app
    spec:
      volumes:
      - name: nginx-secret-vol
        secret:
          secretName: secret-nginx-cert
      containers:
      - name: nginx
        image: duowngtora/kubernetes:nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "300m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-secret-vol
          mountPath: /certs

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-test-service
  namespace: nginx-ingress
spec:
  selector:
    app: nginx-test-ingress-app
  ports:
  - port: 80
    targetPort: 80


---

apiVersion: v1
kind: Service
metadata:
  name: nginx-test-ingress-service-nodeport
  namespace: nginx-ingress
spec:
  type: NodePort
  selector:
    app: nginx-test-ingress-app
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31080
