example/8.Ingress/Nginx_Ingress/2.ingress-nginx-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test-ingress
  labels:
    name: nginx-test-ingress
  namespace: nginx-ingress
spec:
  tls:
  - hosts:
    - duowngtora.test
    secretName: default-server-secret
  rules:
  - host: duowngtora.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-ingress-test-service
            port: 
              number: 80
